syntax = "proto3";

package proto;

option go_package = "proto/cart";

message CartInsertRequest {
    string user_id = 1;
    string product_id = 2;
    uint32 qty = 3;
}

message CartInsertResponse {
    string msg = 1;
}

message CartDetailRequest {
    string id = 1;
    string product_id = 2;
}

message CartDetailResponse {
    string id = 1;
    string user_id = 2;
    string product_id = 3;
    int64 qty = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
}

service CartService {
    rpc InsertCart(CartInsertRequest) returns (CartInsertResponse);
    rpc DetailCart(CartDetailRequest) returns (CartDetailResponse);
}